--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -7,6 +7,7 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        gap: 2%;
         li {
             &:hover {
                 background-color: #f5edff;
